# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/scripts/: brain_games.py
brain_games_1/: cli.py  logic.py  logic_game.py
brain_games_1/game/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games_1/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
