[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This package includes five console games."
authors = ["Andrey Bezkorovaynyi <duhasmok@gmail.com>"]
repository = "https://github.com/AndryVanDuk/python-project-49.git"
readme = "README.md"
packages = [{include = "brain_games_1"}]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Framework :: Flake8",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: Free For Educational Use",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Arcade",
]


[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games_1.scripts.brain_games:main"
brain-even = "brain_games_1.scripts.brain_even:main"
brain-calc = "brain_games_1.scripts.brain_calc:main"
brain-gcd = "brain_games_1.scripts.brain_gcd:main"
brain-progression = "brain_games_1.scripts.brain_progression:main"
brain-prime = "brain_games_1.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
